# notes

./: README.md  clear-icon-cache.bat  create-ico.html  generate-notes-icons.html  index.html  package-lock.json  package.json  preview-icons.html
.github/workflows/: build.yml  ci.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  lib.rs  models.rs  tray.rs
src/components/About/: index.tsx  styles.css
src/components/AttachmentPanel/: index.tsx  styles.css
src/components/CompactNote/: index.tsx  styles.css
src/components/CompactViewer/: index.tsx  styles.css
src/components/DesktopEditor/: index.tsx  styles.css
src/components/FloatingDock/: index.tsx  styles.css
src/components/Modal/: index.tsx  styles.css
src/components/NoteCard/: index.tsx  styles.css
src/components/NoteEditor/: index.tsx  styles.css
src/components/NoteSelector/: index.tsx  styles.css
src/components/ReminderPanel/: index.tsx  styles.css
src/components/RichEditor/: index.tsx  styles.css
src/components/Settings/: index.tsx  styles.css
src/components/Sidebar/: index.tsx  styles.css
src/components/TagInput/: index.tsx  styles.css
src/stores/: noteStore.ts
src/styles/: theme.css
src/types/: note.ts
src/utils/: format.ts  updater.ts
